--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=7.0.0",
-        "open-admin-org/open-admin": "~1.0"
+        "open-admin-org/open-admin": "dev-main"
     },
     "autoload": {
         "psr-4": {
